# DevFeats

./: .editorconfig  .gitignore  .gitmodules  .shellcheckrc  AGENTS.md  Makefile  README.md  get.bash  get.sh  install.bash  install.sh  justfile  lefthook.yml  pixi.toml
.claude/: settings.local.json
.config/: ci.yaml  docs.yaml  lefthook.yml  lib-local-vars.allowlist  project.yaml  pytest.ini
.config/proman/: _main.yaml  ci.yaml  docs.yaml
.dev/config/: ci.yaml  docs.yaml  pytest.ini  ruff.toml
.dev/lib/: config.sh  pyproject.toml
.dev/lib/proman/: __init__.py  config.py  const.py  feature_env.py  git.py  git_utils.py  helpers.py  manifest_util.py  metadata.py  migrate_ctx_metadata.py  schema_bundle.py  when_util.py
.dev/lib/proman/cicd/: __init__.py  config_schema.json  detect.py
.dev/lib/proman/cli/: __init__.py  build_docs_pkg.py  build_feats.py  build_lib.py  gen_docs_data.py  publish_docs_schemas.py  show_feat_opts.py  show_feats.py  sync.py  test_install_matrix.py  test_lib_matrix.py  validate_tests.py
.dev/lib/proman/docs/: feat_doc_gen.py  gen_docs.py  lib_doc_gen.py  parse_lib.py
.dev/lib/proman/release/: __init__.py  detect.py
.dev/lib/proman/sync/: __init__.py  file_sync.py  install_script.py  metadata.py  pipeline.py
.dev/lib/proman/test/: __init__.py  checks.py  codegen.py  environments.py  feature_logs.py  gen_devcontainer.py  install_matrix.py  lib_matrix.py  loader.py  names.py  run.py  scenarios.py
.dev/lib/proman/utils/: __init__.py  markdown.py
.dev/scripts/: migrate-checks.py  split_install_shell.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup-dev.sh
.devcontainer/.dev/: Dockerfile  ai_chat.md  devcontainer-lock.json  devcontainer.json  link-copilot-storage.py  setup-dev.sh  setup.sh  website-conda-env.yaml
.github/: ci_trigger_paths.yaml  copilot-instructions.md
docs/: _toc.yml  conf.py  features.md  index.md  toc.yaml
docs/dev-guide/: ci.md  (+6 more)
features/: DEV.template.md  REF.template.md  bootstrap.sh  checks.schema.json  derived-options.yaml  get.sh  install.sh  install.tmpl.bash  metadata.schema.json  metadata.shared.yaml  shared-options.yaml  sysset.sh  tool-ref.template.md
lib/: __init__.bash  _posix.sh  argparse-manifest.schema.json  argparse.bash  argparse.sh  bootstrap.bash  bootstrap.sh  checksum.sh  ctx-match.jq  ctx-when-eval.jq  ctx.bash  ctx.sh  devcontainer.sh  file.bash  file.sh  git.sh  github.bash  github.sh  graph.sh  install.sh  json.bash  json.sh  jsonc.py  lock.bash  lock.sh  logging-api.sh  logging.bash  logging.sh  net.bash  net.sh  npm.bash  npm.sh  oci.bash  oci.sh  os.bash  os.sh  ospkg-manifest.jq  ospkg-manifest.schema.json  ospkg.bash  ospkg.manifest.schema.json  (+14 more)
schemas/: kit-manifest.schema.json
scripts/: build-artifacts.sh  build-offline-kit.sh  compute-bundle-tag.py  detect-releasable.py  gen_docs.py  git_helpers.sh  git_utils.py  offline_kit_assemble.py  python.sh  setup-dev.sh  sync-argparse.py  sync-deps.py  sync-lib.sh  sync-metadata.py  sync-src.py  sync-src.sh  validate-metadata.py  watch-gha-run.sh
test/: environments.yaml  run-linux.sh  run-macos.sh  run-unit.sh  run.sh
(+1034 files in other folders)
