[project]
name = "proman"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "jsonschema>=4",
    "gittidy>=0.3.1,<0.4",
    "pylinks>=0.1.0,<0.2",
]

[project.scripts]
proman-sync = "proman.cli.sync:main"
proman-gen-docs-data = "proman.cli.gen_docs_data:main"
proman-gen-docs = "proman.docs.gen_docs:main"
proman-release-detect = "proman.release.detect:main"
proman-cicd-detect = "proman.cicd.detect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
