[project]
name = "proman"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6",
    "jsonschema>=4",
    "gittidy>=0.3.1,<0.4",
    "pylinks>=0.1.0,<0.2",
    "mdit>=0.1.0,<0.2",
]

[project.scripts]
proman-sync = "proman.cli.sync:main"
proman-gen-docs-data = "proman.cli.gen_docs_data:main"
proman-gen-docs = "proman.docs.gen_docs:main"
proman-release-detect = "proman.release.detect:main"
proman-cicd-detect = "proman.cicd.detect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # print() is intentional in CLI entry points and progress logging
    "T201",
    # subprocess calls use trusted, hardcoded commands from within the repo
    "S603",
    "S607",
    # gittidy exposes a private `_rest_query` as its public query API
    "SLF001",
    # HTTP 404 is a well-known constant; defining HTTP_NOT_FOUND adds no clarity
    "PLR2004",
    # "consider else block" — valid but too pedantic for this codebase
    "TRY300",
    # C/PLR complexity rules fire on intentional orchestration functions
    "C901",
    "PLR0912",
    "PLR0915",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
