[project]
name = "proman"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml >=6",
    "jsonschema >=4",
    "gittidy ==0.3.2",
    "pylinks ==0.1.3",
    "mdit ==0.1.4",
    "pyserials ==0.2.1",
]

[project.scripts]
proman-sync = "proman.cli.sync:main"
proman-gen-docs-data = "proman.cli.gen_docs_data:main"
proman-release-detect = "proman.release.detect:main"
proman-cicd-detect = "proman.cicd.detect:main"
proman-test-resolve-env = "proman.test.environments:resolve_cli"
proman-test-lib-matrix = "proman.cli.test_lib_matrix:main"
proman-test-install-matrix = "proman.cli.test_install_matrix:main"
proman-test-gen-devcontainer = "proman.test.gen_devcontainer:main_cli"
proman-test-run = "proman.test.run:main"
proman-test-feature-log-path = "proman.test.names:host_log_path_cli"
proman-test-sync-tests = "proman.test.codegen:main"
proman-show-feats = "proman.cli.show_feats:main"
proman-show-feat-opts = "proman.cli.show_feat_opts:main"
proman-build-feats = "proman.cli.build_feats:main"
proman-build-docs-pkg = "proman.cli.build_docs_pkg:main"
proman-publish-docs-schemas = "proman.cli.publish_docs_schemas:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
